Begining of task 2.5

--- a/task1/task1.html
+++ b/task1/task1.html
@@ -6,8 +6,6 @@
     <title>Task1 - Tymoteusz Piwowarski, Wojciech Mokwiński</title>
   </head>
   <body>
-    <h1>Theoretical Overview</h1>
-
     <h2>1.1 Describe ISO/OSI model and protocol assignment</h2>
     <p>The OSI model defines seven layers:</p>
     <p>
@@ -91,118 +89,120 @@
 
     <h2>1.3. Protocol Assignments</h2>
     <table>
-        <tr>
-            <th>Protocol</th>
-            <th>Layer</th>
-        </tr>
-        <tr>
-            <td>ARP (Address Resolution Protocol)</td>
-            <td>Data Link Layer</td>
-        </tr>
-        <tr>
-            <td>Bluetooth</td>
-            <td>Data Link Layer</td>
-        </tr>
-        <tr>
-            <td>DHCP (Dynamic Host Configuration Protocol)</td>
-            <td>Application Layer</td>
-        </tr>
-        <tr>
-            <td>DNS (Domain Name System)</td>
-            <td>Application Layer</td>
-        </tr>
-        <tr>
-            <td>FTP (File Transfer Protocol)</td>
-            <td>Application Layer</td>
-        </tr>
-        <tr>
-            <td>HTTP (Hypertext Transfer Protocol)</td>
-            <td>Application Layer</td>
-        </tr>
-        <tr>
-            <td>ICMP (Internet Control Message Protocol)</td>
-            <td>Network Layer</td>
-        </tr>
-        <tr>
-            <td>IEEE 1394</td>
-            <td>Physical Layer</td>
-        </tr>
-        <tr>
-            <td>IEEE 802.11 (Wi-Fi)</td>
-            <td>Data Link Layer</td>
-        </tr>
-        <tr>
-            <td>IGMP (Internet Group Management Protocol)</td>
-            <td>Network Layer</td>
-        </tr>
-        <tr>
-            <td>IPv4 (Internet Protocol version 4)</td>
-            <td>Network Layer</td>
-        </tr>
-        <tr>
-            <td>IPv6 (Internet Protocol version 6)</td>
-            <td>Network Layer</td>
-        </tr>
-        <tr>
-            <td>L2TP (Layer 2 Tunneling Protocol)</td>
-            <td>Data Link Layer</td>
-        </tr>
-        <tr>
-            <td>MIME (Multipurpose Internet Mail Extensions)</td>
-            <td>Application Layer</td>
-        </tr>
-        <tr>
-            <td>NetBIOS (Network Basic Input/Output System)</td>
-            <td>Application Layer</td>
-        </tr>
-        <tr>
-            <td>NNTP (Network News Transfer Protocol)</td>
-            <td>Application Layer</td>
-        </tr>
-        <tr>
-            <td>RS-232</td>
-            <td>Physical Layer</td>
-        </tr>
-        <tr>
-            <td>RS-449</td>
-            <td>Physical Layer</td>
-        </tr>
-        <tr>
-            <td>RTP (Real-time Transport Protocol)</td>
-            <td>Transport Layer</td>
-        </tr>
-        <tr>
-            <td>SIP (Session Initiation Protocol)</td>
-            <td>Application Layer</td>
-        </tr>
-        <tr>
-            <td>SLIP (Serial Line Internet Protocol)</td>
-            <td>Data Link Layer</td>
-        </tr>
-        <tr>
-            <td>SSL (Secure Sockets Layer)</td>
-            <td>Transport Layer</td>
-        </tr>
-        <tr>
-            <td>TCP (Transmission Control Protocol)</td>
-            <td>Transport Layer</td>
-        </tr>
-        <tr>
-            <td>Telnet</td>
-            <td>Application Layer</td>
-        </tr>
-        <tr>
-            <td>TLS (Transport Layer Security)</td>
-            <td>Transport Layer</td>
-        </tr>
-        <tr>
-            <td>UDP (User Datagram Protocol)</td>
-            <td>Transport Layer</td>
-        </tr>
-        <tr>
-            <td>USB (Universal Serial Bus)</td>
-            <td>Physical Layer</td>
-        </tr>
+      <tr>
+        <th>Protocol</th>
+        <th>Layer</th>
+      </tr>
+      <tr>
+        <td>ARP (Address Resolution Protocol)</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>Bluetooth</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>DHCP (Dynamic Host Configuration Protocol)</td>
+        <td>Application Layer</td>
+      </tr>
+      <tr>
+        <td>DNS (Domain Name System)</td>
+        <td>Application Layer</td>
+      </tr>
+      <tr>
+        <td>FTP (File Transfer Protocol)</td>
+        <td>Application Layer</td>
+      </tr>
+      <tr>
+        <td>HTTP (Hypertext Transfer Protocol)</td>
+        <td>Application Layer</td>
+      </tr>
+      <tr>
+        <td>ICMP (Internet Control Message Protocol)</td>
+        <td>Network Layer</td>
+      </tr>
+      <tr>
+        <td>IEEE 1394</td>
+        <td>Physical Layer</td>
+      </tr>
+      <tr>
+        <td>IEEE 802.11 (Wi-Fi)</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>IGMP (Internet Group Management Protocol)</td>
+        <td>Network Layer</td>
+      </tr>
+      <tr>
+        <td>IPv4 (Internet Protocol version 4)</td>
+        <td>Network Layer</td>
+      </tr>
+      <tr>
+        <td>IPv6 (Internet Protocol version 6)</td>
+        <td>Network Layer</td>
+      </tr>
+      <tr>
+        <td>L2TP (Layer 2 Tunneling Protocol)</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>MIME (Multipurpose Internet Mail Extensions)</td>
+        <td>Application Layer</td>
+      </tr>
+      <tr>
+        <td>NetBIOS (Network Basic Input/Output System)</td>
+        <td>Application Layer</td>
+      </tr>
+      <tr>
+        <td>NNTP (Network News Transfer Protocol)</td>
+        <td>Application Layer</td>
+      </tr>
+      <tr>
+        <td>RS-232</td>
+        <td>Physical Layer</td>
+      </tr>
+      <tr>
+        <td>RS-449</td>
+        <td>Physical Layer</td>
+      </tr>
+      <tr>
+        <td>RTP (Real-time Transport Protocol)</td>
+        <td>Transport Layer</td>
+      </tr>
+      <tr>
+        <td>SIP (Session Initiation Protocol)</td>
+        <td>Application Layer</td>
+      </tr>
+      <tr>
+        <td>SLIP (Serial Line Internet Protocol)</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>SSL (Secure Sockets Layer)</td>
+        <td>Transport Layer</td>
+      </tr>
+      <tr>
+        <td>TCP (Transmission Control Protocol)</td>
+        <td>Transport Layer</td>
+      </tr>
+      <tr>
+        <td>Telnet</td>
+        <td>Application Layer</td>
+      </tr>
+      <tr>
+        <td>TLS (Transport Layer Security)</td>
+        <td>Transport Layer</td>
+      </tr>
+      <tr>
+        <td>UDP (User Datagram Protocol)</td>
+        <td>Transport Layer</td>
+      </tr>
+      <tr>
+        <td>USB (Universal Serial Bus)</td>
+        <td>Physical Layer</td>
+      </tr>
     </table>
+
+    <h2>Use ping to check connection to web server Use Wireshark to find to list all protocols which are used during this communication. Assign abovementioned protocols to ISO/OSI layers.</h2>
   </body>
 </html>
