--- a/task1/task1.html
+++ b/task1/task1.html
@@ -259,6 +259,44 @@
         src="image/task2.6_1.png"
         alt=""
       />
+      <table>
+      <tr>
+        <th>Protocol</th>
+        <th>Layer</th>
+      </tr>
+      <tr>
+        <td>ARP (Address Resolution Protocol)</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>DNS</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>ICMP</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>MDNS</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>QUIC</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>SSH</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>SSHV2</td>
+        <td>Data Link Layer</td>
+      </tr>
+      <tr>
+        <td>TCP</td>
+        <td>Data Link Layer</td>
+      </tr>
+      </table>
       <div style="margin: 20px 20px 20px 20px">
         <h3>task 2.8</h3>
         <div class="text">
