--- a/task1/task1.html
+++ b/task1/task1.html
@@ -300,46 +300,51 @@
       <div style="margin: 20px 20px 20px 20px">
         <h3>task 2.8</h3>
         <div class="text">
-          Several protocols are commonly used for file transfer, each serving
-          different purposes and offering various features. Here are three
-          widely used file transfer protocols: File Transfer Protocol (FTP):
-          Purpose: FTP is one of the oldest and most traditional protocols used
-          for transferring files over a network. It is often employed for
-          website maintenance, software distribution, and general file sharing.
-          How it Works: FTP operates over two channels - a command channel (for
-          sending commands) and a data channel (for transferring files). It can
-          work in either active or passive mode. While FTP itself does not
-          provide encryption, FTPS (FTP Secure) is a secured version that adds a
-          layer of encryption using SSL/TLS. Secure File Transfer Protocol
-          (SFTP): Purpose: SFTP is a secure version of FTP designed to provide
-          encrypted file transfer and improved security features. It is often
-          used for secure remote file access and management. How it Works: SFTP
-          operates over a secure channel using SSH (Secure Shell) for
-          authentication and encryption. Unlike FTP, SFTP uses a single
-          encrypted channel for both command and data. Hypertext Transfer
-          Protocol (HTTP) and Hypertext Transfer Protocol Secure (HTTPS):
-          Purpose: While HTTP and HTTPS are primarily used for transferring web
-          content, they can also be used for file transfer, especially for
-          downloading files from web servers. How it Works: HTTP is the standard
-          protocol for transferring hypertext (web pages) over the internet.
-          HTTPS is the secure version of HTTP, employing SSL/TLS encryption to
-          secure the data during transmission. While not specifically designed
-          for file transfer, these protocols are commonly used for downloading
-          files from websites. ISO/OSI Layers: FTP: ISO/OSI Layers: Application
-          Layer (Layer 7): FTP commands are application layer protocols.
-          Presentation Layer (Layer 6): FTP data can be encoded in different
-          formats for transmission. SFTP: ISO/OSI Layers: Application Layer
-          (Layer 7): SFTP operates at the application layer, providing secure
-          file transfer services. Presentation Layer (Layer 6): SFTP uses SSH
-          for secure communication, which includes encryption and compression.
-          HTTP and HTTPS: ISO/OSI Layers: Application Layer (Layer 7): HTTP and
-          HTTPS operate at the application layer, facilitating the transfer of
-          web content. Presentation Layer (Layer 6): HTTPS adds a layer of
-          encryption using SSL/TLS for secure communication. Understanding the
-          protocols and their respective ISO/OSI layers can provide insights
-          into how data is transferred and secured over a network. Depending on
-          your specific requirements and security considerations, you can choose
-          the appropriate protocol for your file transfer needs.
+            <ul>
+    <li>
+        <strong>FTP (File Transfer Protocol):</strong> 
+        FTP is one of the oldest and most widely used protocols for transferring files over a network. 
+        It operates on two channels: the command channel (used for sending commands) and the data channel (used for transferring files). 
+        FTP supports authentication and authorization mechanisms, but it lacks encryption, making it less secure for transmitting sensitive data.
+    </li>
+    <li>
+        <strong>SFTP (SSH File Transfer Protocol):</strong> 
+        SFTP is a secure file transfer protocol that runs over the SSH (Secure Shell) protocol, 
+        providing a secure connection for file transfer. 
+        It encrypts both commands and data, ensuring confidentiality and integrity. SFTP is commonly used for secure and reliable file transfers.
+    </li>
+    <li>
+        <strong>FTPS (File Transfer Protocol Secure):</strong> 
+        FTPS is an extension of FTP that adds support for Transport Layer Security (TLS) or Secure Sockets Layer (SSL) encryption. 
+        It offers authentication and encryption similar to SFTP but operates over separate control and data channels, providing security for FTP-based file transfers.
+    </li>
+    <li>
+        <strong>HTTP (Hypertext Transfer Protocol):</strong> 
+        While primarily used for web browsing, HTTP can also facilitate file transfers. 
+        However, it's less efficient than specialized file transfer protocols because it wasn't designed specifically for large file transfers.
+    </li>
+    <li>
+        <strong>HTTPS (Hypertext Transfer Protocol Secure):</strong> 
+        HTTPS is a secure version of HTTP that uses encryption (SSL/TLS) to secure data transmission. 
+        It's commonly used for secure web communication, including file downloads or uploads via websites.
+    </li>
+    <li>
+        <strong>SCP (Secure Copy Protocol):</strong> 
+        SCP is a secure file transfer protocol that uses SSH for data transfer and authentication. 
+        It allows secure copying of files between hosts on a network.
+    </li>
+    <li>
+        <strong>TFTP (Trivial File Transfer Protocol):</strong> 
+        TFTP is a simpler form of FTP, often used for transferring small amounts of data where simplicity 
+        and low overhead are more critical than advanced features.
+        However, TFTP lacks security features like authentication and encryption.
+    </li>
+    <li>
+        <strong>AS2 (Applicability Statement 2):</strong>
+        AS2 is a protocol used for secure and reliable data exchange between businesses over the internet. 
+        It employs digital certificates and encryption for data integrity and confidentiality.
+    </li>
+</ul>
         </div>
 
         <h3>task 2.9</h3>
