--- a/task1/task1.html
+++ b/task1/task1.html
@@ -286,9 +286,8 @@
         <td>TCP</td>
         <td>Data Link Layer</td>
       </tr>
-<<<<<<< HEAD
       </table>
-      <div style="margin: 20px 20px 20px 20px">
+    <div style="margin: 20px 20px 20px 20px">
         <h3>task 2.8</h3>
         <div class="text">
             <ul>
@@ -336,62 +335,31 @@
         It employs digital certificates and encryption for data integrity and confidentiality.
     </li>
 </ul>
-        </div>
 
-        <h3>task 2.9</h3>
-        <p></p>
-=======
-    </table>
-    <div style="margin: 20px 20px 20px 20px">
-      <h3>task 2.8</h3>
-      <div class="text">
-        Several protocols are commonly used for file transfer, each serving
-        different purposes and offering various features. Here are three
-        widely used file transfer protocols: File Transfer Protocol (FTP):
-        Purpose: FTP is one of the oldest and most traditional protocols used
-        for transferring files over a network. It is often employed for
-        website maintenance, software distribution, and general file sharing.
-        How it Works: FTP operates over two channels - a command channel (for
-        sending commands) and a data channel (for transferring files). It can
-        work in either active or passive mode. While FTP itself does not
-        provide encryption, FTPS (FTP Secure) is a secured version that adds a
-        layer of encryption using SSL/TLS. Secure File Transfer Protocol
-        (SFTP): Purpose: SFTP is a secure version of FTP designed to provide
-        encrypted file transfer and improved security features. It is often
-        used for secure remote file access and management. How it Works: SFTP
-        operates over a secure channel using SSH (Secure Shell) for
-        authentication and encryption. Unlike FTP, SFTP uses a single
-        encrypted channel for both command and data. Hypertext Transfer
-        Protocol (HTTP) and Hypertext Transfer Protocol Secure (HTTPS):
-        Purpose: While HTTP and HTTPS are primarily used for transferring web
-        content, they can also be used for file transfer, especially for
-        downloading files from web servers. How it Works: HTTP is the standard
-        protocol for transferring hypertext (web pages) over the internet.
-        HTTPS is the secure version of HTTP, employing SSL/TLS encryption to
-        secure the data during transmission. While not specifically designed
-        for file transfer, these protocols are commonly used for downloading
-        files from websites. ISO/OSI Layers: FTP: ISO/OSI Layers: Application
-        Layer (Layer 7): FTP commands are application layer protocols.
-        Presentation Layer (Layer 6): FTP data can be encoded in different
-        formats for transmission. SFTP: ISO/OSI Layers: Application Layer
-        (Layer 7): SFTP operates at the application layer, providing secure
-        file transfer services. Presentation Layer (Layer 6): SFTP uses SSH
-        for secure communication, which includes encryption and compression.
-        HTTP and HTTPS: ISO/OSI Layers: Application Layer (Layer 7): HTTP and
-        HTTPS operate at the application layer, facilitating the transfer of
-        web content. Presentation Layer (Layer 6): HTTPS adds a layer of
-        encryption using SSL/TLS for secure communication. Understanding the
-        protocols and their respective ISO/OSI layers can provide insights
-        into how data is transferred and secured over a network. Depending on
-        your specific requirements and security considerations, you can choose
-        the appropriate protocol for your file transfer needs.
->>>>>>> 74b6385d7bef942487e8c8c2fbd6921fb584b935
-      </div>
-
+<div>
       <h3>task 2.9</h3>
-      <p></p>
+      <p><ul>
+    <li>
+        <strong>Directory Indexing:</strong> If a web server's directory does not contain an index file (like index.html), the server may be configured to display a listing of the files and directories within that directory.
+    </li>
+    <li>
+        <strong>Default Page:</strong> Web servers usually have a default file (like index.html or default.html) that they look for and serve when a user accesses a directory directly without specifying a file. This prevents directory listing and displays a specific page instead.
+    </li>
+    <li>
+        <strong>Directory Listing Options:</strong> Web server configurations often allow administrators to enable or disable directory listing. When directory listing is enabled and there's no index file present, the server displays a list of files and directories in that folder. This can be useful for sharing files but might pose a security risk by exposing directory contents.
+    </li>
+    <li>
+        <strong>Custom Error Pages:</strong> Some web servers can be set up to display custom error pages (like 404 Not Found or 403 Forbidden) when a directory is accessed, and an index file or default page is absent. This improves user experience and security by preventing directory browsing.
+    </li>
+    <li>
+        <strong>Access Control:</strong> Access permissions can be set on directories to control who can view their contents. This prevents unauthorized users from seeing directory listings or accessing files.
+    </li>
+    <li>
+        <strong>Server Configuration Files:</strong> Configuration files (e.g., .htaccess for Apache server) allow administrators to specify rules for how directories should be handled. They can define whether directory listings are allowed or disallowed and specify custom error pages or default files.
+    </li>
+</ul>
+</p>
     </div>
-  </div>
 </body>
 
 </html>
