--- a/task1/task1.html
+++ b/task1/task1.html
@@ -374,6 +374,19 @@
 </ul>
 </p>
     </div>
-</body>
 
+    <div>
+      <h3>task 2.10</h3>
+      <img style="width: 800px; height: 500px;" src="image/task2.10.png" alt="">
+      <img style="width: 800px; height: 500px;" src="image/task2.10_2.png" alt="">
+      <p>
+        <ul>
+          <li>TCP - Transmission Control Protocol</li>
+          <li>SSDP - Simple Service Discovery Protocol</li>
+          <li>LLMNR - Link-Local Multicast Name Resolution</li>
+          <li>HTTP - Hypertext Transfer Protocol</li>
+        </ul>
+      </p>
+    </div>
+</body>
 </html>
