--- a/task1/task1.html
+++ b/task1/task1.html
@@ -7,7 +7,7 @@
   <title>Task1 - Tymoteusz Piwowarski, Wojciech Mokwiński</title>
 </head>
 
-<body>
+<body style="background-color: rgb(4, 4, 49); color:white; padding:  50px 50px;">
   <h2>1.1 Describe ISO/OSI model and protocol assignment</h2>
   <p>The OSI model defines seven layers:</p>
   <p>
@@ -221,11 +221,11 @@
     <h3>task 2.3</h3>
     <img style="width: 700px; height: 300px" src="image/task2.3.png" alt="" />
     <h3>task 2.4</h3>
-    <img style="width: 900px; height: 300px" src="image/task2.4.png" alt="" />
+    <img style="width: 700px; height: 300px" src="image/task2.4.png" alt="" />
     <h3>task 2.5</h3>
     <!-- <img style="width: 900px; height:200px" src="/network-technologies/task1/image/task2.5.png" alt=""> -->
-    <img style="width: 1200px; height: 800px" src="image/task2.5-1.png" alt="" />
-    <img style="width: 1200px; height: 800px" src="image/task2.5-2.png" alt="" />
+    <img style="width: 700px; height: 500px" src="image/task2.5-1.png" alt="" />
+    <img style="width: 800px; height: 800px" src="image/task2.5-2.png" alt="" />
     <p>
       ICMP, integral to the TCP/IP suite at the IP layer (Layer 3), operates
       alongside IP processing. It's recognized as the protocol used by the
