--- a/task1/task1.html
+++ b/task1/task1.html
@@ -227,7 +227,7 @@
     <img style="width: 700px; height: 500px" src="image/task2.5-1.png" alt="" />
     <img style="width: 800px; height: 800px" src="image/task2.5-2.png" alt="" />
     <p>
-      ICMP, integral to the TCP/IP suite at the IP layer (Layer 3), operates
+      ICMP, integral to the TCP/IP suite at the Network layer (Layer 3), operates
       alongside IP processing. It's recognized as the protocol used by the
       'ping' command for sending echo requests and receiving replies. However,
       due to security concerns, many routers disable echo responses, affecting
